# wyoloservice2_mcp

./: README.md  pyproject.toml
src/wyolo_mcp/: __init__.py  server.py
