[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoloservice-mcp"
version = "0.1.0"
description = "MCP Server for NeuralForgeAI and Train Service 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
wyolo-mcp = "wyolo_mcp.server:main"
